<resources>
    <string name="app_name">MacSolution</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_key" translatable="false">AIzaSyAiqjXIWgO8ei0ECjj90HUBFHzS8seb_So</string>
    <string name="title_activity_maps2">Map</string>
    <string name="name">Name: </string>
    <string name="Email">Email: </string>
    <string name="address">Address: </string>
    <string name="contact">Contact: </string>
    <string name="check">Check Details</string>
    <string name="title_activity_maps_demo">Map</string>
</resources>
